clusters/k3s/apps/automation/profilarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profilarr
  namespace: docker-services
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - profilarr.erwanleboucher.dev
    secretName: profilarr-tls
  rules:
  - host: profilarr.erwanleboucher.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: profilarr
            port:
              number: 6868
